adjusting Form elements and fixing its alignments

--- a/css/style.css
+++ b/css/style.css
@@ -18,4 +18,19 @@ body{
     width: 40vw;
     height: 400px;
     background-color: aliceblue;
+    padding: 20px;
+    border-radius: 15px 15px 100px 15px;
+}
+
+form{
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+input{
+    width: 80px;
+    height: 30px;
+    display: block;
 }
